--- a/templates/index.html
+++ b/templates/index.html
@@ -127,18 +127,21 @@
           </ul>
           {% endfor %}
         </div>
-<!--        <ul class="help">
-          <li class="t1">1</li>
+        <ul class="help">
+          <li class="t0">&nbsp;</li>
+          <li class="t1">&nbsp;</li>
           <li class="t2">2</li>
-          <li class="t3">3</li>
+          <li class="t3">&nbsp;</li>
           <li class="t4">4</li>
-          <li class="t5">5</li>
+          <li class="t5">&nbsp;</li>
           <li class="t6">6</li>
-          <li class="t7">7</li>
+          <li class="t7">&nbsp;</li>
           <li class="t8">8</li>
-          <li class="t9">9</li>
-          <li class="more">&gt;9</li>
-        </ul>-->
+          <li class="t9">&nbsp;</li>
+          <li class="t10">10</li>
+          <li class="t11">&nbsp;</li>
+          <li class="more">&nbsp;</li>
+        </ul>
       </div>
       <div class="timeentries">
         {% for day in report.entries %}
