Updated project url

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     {% block content %}{% endblock %}
     <div id="footer">
         <img src="/static/appengine-silver-120x30.gif" alt="Powered by Google App Engine" />
-        <p>Сторінка проекту <a href="http://code.google.com/p/basecampcal/">http://code.google.com/p/basecampcal/</a></p>
+        <p>Сторінка проекту <a href="https://github.com/kroman0/basecamp-calendar">https://github.com/kroman0/basecamp-calendar</a></p>
     </div>
     <script type="text/javascript">
   var _gaq = _gaq || [];
